# mixtral_cli

./: .env  Cargo.toml  README.md  env.example
src/: api.rs  cli.rs  main.rs
src/api/: config.rs  manage_errors.rs  mistral_api.rs  mixtral_api.rs
